[package]
name = "rivets"
version = "0.1.0"
edition = "2021"

[dependencies]
rivets-macros = { path = "../rivets/rivets-macros" }
rivets-shared = { path = "../rivets/rivets-shared" }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"

[lib]
name = "rivets"
crate-type = ["lib"]
path = "src/lib.rs"