[package]
name = "rivets"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Picco <zacharypicco@gmail.com>"]
description = "Rivets is a Factorio mod loader written in Rust. Hook into compiled functions and change their behavior."
license-file = "LICENSE.md"
repository = "https://github.com/factorio-rivets/rivets"

[dependencies]
rivets-macros = { path = "../rivets-crate/rivets-macros" }
rivets-shared = { path = "../rivets-crate/rivets-shared" }
retour = { version = "0.3", features = ["static-detour"] }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"

[lib]
name = "rivets"
crate-type = ["lib"]
path = "src/lib.rs"