[package]
name = "rivets-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
dll-syringe = "0.15.2"
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
] }
zip = "2.1.6"
