[package]
name = "rivets-macros"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Picco <zacharypicco@gmail.com>"]
description = "Rivets is a Factorio mod loader written in Rust. Hook into compiled functions and change their behavior."
repository = "https://github.com/factorio-rivets/rivets"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
rivets-shared = { path = "../rivets-shared" }
anyhow = "1.0"
lazy-regex = "3.1"
darling = "0.20"

[lib]
proc-macro = true
path = "src/macros.rs"