[package]
name = "rivets-shared"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Picco <zacharypicco@gmail.com>"]
description = "Rivets is a Factorio mod loader written in Rust. Hook into compiled functions and change their behavior."
repository = "https://github.com/factorio-rivets/rivets"

[dependencies]
cpp_demangle = "0.4"
undname = "1.1"
syn = "2.0"
abi_stable = "0.11"

[lib]
name = "rivets_shared"
crate-type = ["lib"]
