[package]
name = "rivets-shared"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Picco <zacharypicco@gmail.com>"]
description = "Rivets is a Factorio mod loader written in Rust. Hook into compiled functions and change their behavior."
repository = "https://github.com/factorio-rivets/rivets"

[dependencies]
cpp_demangle = "0.4"
undname = "1.1"
syn = "2.0"
pdb = "0.8"
anyhow = "1.0"
windows = { version = "0.58", features = [
    "Win32",
    "Win32_System",
    "Win32_System_LibraryLoader",
] }
serde = { version = "1.0", features = ["derive"] }
retour = { version = "0.3", features = ["static-detour"] }

[lib]
name = "rivets_shared"
crate-type = ["lib"]
